--- a/files/etc/ssr/gfw_list.conf
+++ b/files/etc/ssr/gfw_list.conf
@@ -3438,6 +3438,8 @@ server=/girlbanker.com/127.0.0.1#5335
 ipset=/girlbanker.com/gfwlist
 server=/gist.github.com/127.0.0.1#5335
 ipset=/gist.github.com/gfwlist
+server=/gist.githubusercontent.com/127.0.0.1#5335
+ipset=/gist.githubusercontent.com/gfwlist
 server=/git.io/127.0.0.1#5335
 ipset=/git.io/gfwlist
 server=/githubassets.com/127.0.0.1#5335
