--- a/files/usr/libexec/softethervpn/vpn_server.config
+++ b/files/usr/libexec/softethervpn/vpn_server.config
@@ -9,7 +9,7 @@
 # 
 declare root
 {
-	uint ConfigRevision 29
+	uint ConfigRevision 23
 	bool IPsecMessageDisplayed true
 	string Region CN
 
@@ -17,8 +17,8 @@ declare root
 	{
 		string CustomHttpHeader $
 		bool Disabled false
-		byte Key 4iywj5S3DKnsl4WJX9OJ1qAUxP0=
-		string LocalHostname HomeRouter
+		byte Key naP0VQ7Iq80Q2OC/uOzc1TRRNig=
+		string LocalHostname RouterHome
 		string ProxyHostName $
 		uint ProxyPort 0
 		uint ProxyType 0
@@ -160,17 +160,17 @@ declare root
 		{
 			declare RecvTraffic
 			{
-				uint64 BroadcastBytes 3875200894
-				uint64 BroadcastCount 10303730
-				uint64 UnicastBytes 120998039782
-				uint64 UnicastCount 154397434
+				uint64 BroadcastBytes 4186798478
+				uint64 BroadcastCount 10278331
+				uint64 UnicastBytes 56418753216
+				uint64 UnicastCount 73196254
 			}
 			declare SendTraffic
 			{
-				uint64 BroadcastBytes 113475738
-				uint64 BroadcastCount 328291
-				uint64 UnicastBytes 120728611225
-				uint64 UnicastCount 153261812
+				uint64 BroadcastBytes 62552442
+				uint64 BroadcastCount 172936
+				uint64 UnicastBytes 56257657644
+				uint64 UnicastCount 72242056
 			}
 		}
 		declare SyslogSettings
@@ -186,9 +186,9 @@ declare root
 		{
 			uint64 CreatedTime 1594956139158
 			byte HashedPassword +m6grn9LQ0esCjzaLCsouTXhc+4=
-			uint64 LastCommTime 1609126269543
-			uint64 LastLoginTime 1609122291009
-			uint NumLogin 233
+			uint64 LastCommTime 1610241698346
+			uint64 LastLoginTime 1600318023153
+			uint NumLogin 113
 			bool Online true
 			bool RadiusConvertAllMsChapv2AuthRequestToEap false
 			string RadiusRealm $
@@ -379,32 +379,32 @@ declare root
 				{
 					declare master
 					{
-						byte AuthNtLmSecureHash va5XWCu+eubBRkzVmJEA/Q==
-						byte AuthPassword TLNC0HpOdResyGqnoCuO9yjdrlU=
+						byte AuthNtLmSecureHash WJI3ZfDe/FpyI6lElXFH4g==
+						byte AuthPassword uX4pNACGmi3+wBUNRhSYl50C19o=
 						uint AuthType 1
 						uint64 CreatedTime 1594956202691
 						uint64 ExpireTime 0
-						uint64 LastLoginTime 1609122291009
+						uint64 LastLoginTime 1600318023153
 						string Note $
-						uint NumLogin 233
+						uint NumLogin 113
 						string RealName master
-						uint64 UpdatedTime 1602986986959
+						uint64 UpdatedTime 1594956202691
 
 						declare Traffic
 						{
 							declare RecvTraffic
 							{
-								uint64 BroadcastBytes 110052512
-								uint64 BroadcastCount 298604
-								uint64 UnicastBytes 111471357392
-								uint64 UnicastCount 87560463
+								uint64 BroadcastBytes 60566173
+								uint64 BroadcastCount 156351
+								uint64 UnicastBytes 50407696244
+								uint64 UnicastCount 39872784
 							}
 							declare SendTraffic
 							{
-								uint64 BroadcastBytes 3585159
-								uint64 BroadcastCount 31819
-								uint64 UnicastBytes 8791971275
-								uint64 UnicastCount 56371572
+								uint64 BroadcastBytes 2086709
+								uint64 BroadcastCount 17917
+								uint64 UnicastBytes 5539113226
+								uint64 UnicastCount 26590955
 							}
 						}
 					}
@@ -414,17 +414,17 @@ declare root
 			{
 				declare RecvTraffic
 				{
-					uint64 BroadcastBytes 3875200894
-					uint64 BroadcastCount 10303730
-					uint64 UnicastBytes 120998039782
-					uint64 UnicastCount 154397434
+					uint64 BroadcastBytes 4186798478
+					uint64 BroadcastCount 10278331
+					uint64 UnicastBytes 56418753216
+					uint64 UnicastCount 73196254
 				}
 				declare SendTraffic
 				{
-					uint64 BroadcastBytes 113475738
-					uint64 BroadcastCount 328291
-					uint64 UnicastBytes 120728611225
-					uint64 UnicastCount 153261812
+					uint64 BroadcastBytes 62552442
+					uint64 BroadcastCount 172936
+					uint64 UnicastBytes 56257657644
+					uint64 UnicastCount 72242056
 				}
 			}
 		}
