--- a/files/etc/ssr/gfw_list.conf
+++ b/files/etc/ssr/gfw_list.conf
@@ -1222,6 +1222,8 @@ server=/bynet.co.il/127.0.0.1#5335
 ipset=/bynet.co.il/gfwlist
 server=/c-est-simple.com/127.0.0.1#5335
 ipset=/c-est-simple.com/gfwlist
+server=/c-span.org/127.0.0.1#5335
+ipset=/c-span.org/gfwlist
 server=/c-spanvideo.org/127.0.0.1#5335
 ipset=/c-spanvideo.org/gfwlist
 server=/c100tibet.org/127.0.0.1#5335
@@ -4090,6 +4092,8 @@ server=/hkbf.org/127.0.0.1#5335
 ipset=/hkbf.org/gfwlist
 server=/hkbookcity.com/127.0.0.1#5335
 ipset=/hkbookcity.com/gfwlist
+server=/hkchronicles.com/127.0.0.1#5335
+ipset=/hkchronicles.com/gfwlist
 server=/hkchurch.org/127.0.0.1#5335
 ipset=/hkchurch.org/gfwlist
 server=/hkci.org.hk/127.0.0.1#5335
@@ -6416,6 +6420,8 @@ server=/paradisehill.cc/127.0.0.1#5335
 ipset=/paradisehill.cc/gfwlist
 server=/paradisepoker.com/127.0.0.1#5335
 ipset=/paradisepoker.com/gfwlist
+server=/parler.com/127.0.0.1#5335
+ipset=/parler.com/gfwlist
 server=/partycasino.com/127.0.0.1#5335
 ipset=/partycasino.com/gfwlist
 server=/partypoker.com/127.0.0.1#5335
