--- a/files/etc/ssrplus/gfw_list.conf
+++ b/files/etc/ssrplus/gfw_list.conf
@@ -1522,6 +1522,8 @@ server=/vft.com.tw/127.0.0.1#5335
 ipset=/vft.com.tw/gfwlist
 server=/hka8964.wordpress.com/127.0.0.1#5335
 ipset=/hka8964.wordpress.com/gfwlist
+server=/v2ex.com/127.0.0.1#5335
+ipset=/v2ex.com/gfwlist
 server=/june4commemoration.org/127.0.0.1#5335
 ipset=/june4commemoration.org/gfwlist
 server=/ytimg.com/127.0.0.1#5335
@@ -4742,6 +4744,8 @@ server=/dictionary.goo.ne.jp/127.0.0.1#5335
 ipset=/dictionary.goo.ne.jp/gfwlist
 server=/myactimes.com/127.0.0.1#5335
 ipset=/myactimes.com/gfwlist
+server=/efreenews.com/127.0.0.1#5335
+ipset=/efreenews.com/gfwlist
 server=/blog.fuckgfw233.org/127.0.0.1#5335
 ipset=/blog.fuckgfw233.org/gfwlist
 server=/fulue.com/127.0.0.1#5335
@@ -4864,28 +4868,34 @@ server=/joachims.org/127.0.0.1#5335
 ipset=/joachims.org/gfwlist
 server=/justpaste.it/127.0.0.1#5335
 ipset=/justpaste.it/gfwlist
-server=/blogspot.hk/127.0.0.1#5335
-ipset=/blogspot.hk/gfwlist
 server=/xn--90wwvt03e.com/127.0.0.1#5335
 ipset=/xn--90wwvt03e.com/gfwlist
+server=/blogspot.hk/127.0.0.1#5335
+ipset=/blogspot.hk/gfwlist
 server=/xn--oiq.cc/127.0.0.1#5335
 ipset=/xn--oiq.cc/gfwlist
+server=/xn--i2ru8q2qg.com/127.0.0.1#5335
+ipset=/xn--i2ru8q2qg.com/gfwlist
+server=/www.hostloc.com/127.0.0.1#5335
+ipset=/www.hostloc.com/gfwlist
+server=/xn--4gq171p.com/127.0.0.1#5335
+ipset=/xn--4gq171p.com/gfwlist
 server=/icij.org/127.0.0.1#5335
 ipset=/icij.org/gfwlist
 server=/matainja.com/127.0.0.1#5335
 ipset=/matainja.com/gfwlist
 server=/astrill.com/127.0.0.1#5335
 ipset=/astrill.com/gfwlist
-server=/xn--i2ru8q2qg.com/127.0.0.1#5335
-ipset=/xn--i2ru8q2qg.com/gfwlist
+server=/shopee.tw/127.0.0.1#5335
+ipset=/shopee.tw/gfwlist
 server=/rangzen.com/127.0.0.1#5335
 ipset=/rangzen.com/gfwlist
-server=/www.hostloc.com/127.0.0.1#5335
-ipset=/www.hostloc.com/gfwlist
+server=/ordns.he.net/127.0.0.1#5335
+ipset=/ordns.he.net/gfwlist
 server=/toonel.net/127.0.0.1#5335
 ipset=/toonel.net/gfwlist
-server=/xn--4gq171p.com/127.0.0.1#5335
-ipset=/xn--4gq171p.com/gfwlist
+server=/bbs.sina.com/127.0.0.1#5335
+ipset=/bbs.sina.com/gfwlist
 server=/hdsky.me/127.0.0.1#5335
 ipset=/hdsky.me/gfwlist
 server=/passion.com/127.0.0.1#5335
@@ -7474,8 +7484,8 @@ server=/orient-doll.com/127.0.0.1#5335
 ipset=/orient-doll.com/gfwlist
 server=/assets.bwbx.io/127.0.0.1#5335
 ipset=/assets.bwbx.io/gfwlist
-server=/bbs.sina.com/127.0.0.1#5335
-ipset=/bbs.sina.com/gfwlist
+server=/mohu.rocks/127.0.0.1#5335
+ipset=/mohu.rocks/gfwlist
 server=/boxun.com/127.0.0.1#5335
 ipset=/boxun.com/gfwlist
 server=/www.taiwanonline.cc/127.0.0.1#5335
